v4.7.0pre7
- ADDED: Project Bench
- ADDED: Auto Crafting Bench
- FIX: Filtered Importer merging unstackable items
- FIX: Lamps blocking mob spawning even when off
- FIX: Crafting tree reporting incorrent missing items
- FIX: Chip settings panels opening in inconvienient places
- CHANGE: Microblocks of inverted lamps will light up
- CHANGE: Crafting chip now extracts up to a stack

v4.7.0pre6
- ADDED: Jetpack particles and models
- ADDED: Crafting Extension chip
- REMOVED: Routing chip upgrade system
- REMOVED: Routed Crafting pipe
- REMOVED: Routed Extension pipe
- FIX: Furnace recipe crash
- FIX: Inteface pipe keeping logic after removing chip
- FIX: Filtered importer destroying items
- FIX: Redstone not connecting to machines properly
- FIX: Analog IC IOs showing incorrect frequency in their guis
- FIX: Teleposer server crash
- CHANGE: Moved crafting logic from crafting pipe to chip
- CHANGE: Crafting chip can now be installed in any Interface pipe
- CHANGE: New routing fx

v4.7.0pre5
- ADDED: Cell gate IC parts
- ADDED: Creative mode IC Chip with instant and free prints
- ADDED: IC Blueprint reset recipe
- ADDED: IC Blueprint copy recipe
- FIX: IC Gates not updating neighbors properly
- FIX: IC Gates not recognizing white signal changes
- FIX: Crash when resource packs change lily textures
- FIX: Container item duplication exploit
- FIX: Rebalanced frame motor electricity use
- FIX: Thermal expansion auto-adding incorrect recipes for electrotine ingots and dusts
- FIX: Solar panels no longer working after 1 day cycle
- FIX: IC Printer not recognizing lever
- FIX: IC Printer crashing because some mod added an invalid recipe
- FIX: IC Printer container shift clicking
- FIX: Dependency auto-downloader trying to use outdated links
- CHANGE: Rewrote Firewall pipe gui
- CHANGE: Rewrote Request pipe gui
- CHANGE: IC Printer can now pull items from adjacent inventories

v4.7.0pre4
- FIX: Server crash when using some IC gates
- CHANGE: Reworked Routing Chip guis
